<resources>
    <string name="app_name">DamKeep</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_signup">SignUp</string>
    <string name="hint_fullname">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_repeat_password">Repeat Password</string>
    <string name="text_titulo">titulo</string>
    <string name="text_contenido">Contenido</string>
    <string name="hint_titulo">Título</string>
    <string name="hint_description">Descripción</string>
    <string name="text_logout">Salir</string>
    <string name="text_save">Save</string>
</resources>
