<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NuevaNotaActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextDescripcionNotaNueva"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="@+id/editTextTituloNuevaNota"
                app:layout_constraintStart_toStartOf="@+id/editTextTituloNuevaNota"
                app:layout_constraintTop_toBottomOf="@+id/editTextTituloNuevaNota" />

            <Button
                android:id="@+id/buttonGuardarNota"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_save"
                app:layout_constraintEnd_toEndOf="@+id/editTextDescripcionNotaNueva"
                app:layout_constraintStart_toStartOf="@+id/editTextDescripcionNotaNueva"
                app:layout_constraintTop_toBottomOf="@+id/editTextDescripcionNotaNueva" />

            <EditText
                android:id="@+id/editTextTituloNuevaNota"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/hint_titulo"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>